# cpp-projects

./: CMakeLists.txt  calculator.cpp  input.txt  matrix_library.cpp  matrix_library.h  snake.cpp  student_management_system.cpp  tictactoe.cpp
exercises/: data_structures.cpp  data_structures.h  main.cpp
snake_game/: Player.cpp  Player.h  Snake.cpp  Snake.h  main.cpp  score_storage.cpp
